[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
hyper = { version = "1.6.0", features = ["full"] }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.15"
